fix [#36105] Bevel UV Flicker interp_weights_poly_v2/3 functions used much too small an epsilon value, caused flickering.